code/oz/internal/shell/filter/testdata/cargo_failure/stdout.txt
   Compiling demo v0.1.0 (/tmp/demo)
error[E0425]: cannot find value `x` in this scope
 --> src/lib.rs:3:5
  |
3 |     x + 1
  |     ^ not found in this scope
